# automsitory

./: .gitignore  CLAUDE.md  LloydsRulesVibeCodingApp.jsx  README.md  RT_Compliance_Assessment.docx  RT_Feasibility_Report.docx  app.js  build_offline.py  double_wall_pipe.step  flange_WN_compact.stl  gen_compliance_docx.py  gen_rt_report_docx.py  hatch_coaming_visualization.html  index.html  inner_NPS2_Sch40.stl  outer_NPS3_Sch10S.stl  pipe.py  pipe_NPS3_Sch10S.step  pipe_NPS3_Sch10S.stl  pyproject.toml  requirements.txt  rt_calculation.md  rt_compliance.md  rt_film_sim.py  rt_section_cards.py  rt_shot_cards.py  rt_topview.py  rules.js  scan_mail_assistant.py  scan_mail_tool.py  styles.css  subautository  vehicle_employee.csv  viewer.html
.github/workflows/: deploy-pages.yml
app/: README.md  index.html  package-lock.json  package.json  vite.config.js
app-automation/: README.md  config.yaml  core.py  requirements.txt  run.py
app-automation/scenarios/: zeroharm_checklist.py
app-automation/utils/: config_loader.py  logger_setup.py
app/src/: App.jsx  index.css
apps/web/: .dockerignore  .env.example  Dockerfile  FINE_DRAFT_APP.md  FINE_DRAFT_UAT_CHECKLIST.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
configs/: colors.json  mapping_rules.json  rules_extraction_fallback.json
containership-app/: index.html  package-lock.json  package.json
containership-app/src/: App.jsx
diagrams/: decision_flow.mmd
docs/: index.html  no96-tightness-tests.html
education/: NDT_PAUT_Education_Material.md
hatch-coaming-3d/: index.html  package-lock.json  package.json  vite.config.ts
hatch-coaming-app/: index.html  package-lock.json  package.json
inputs/: manual_table_input.json  project.json  project_case1_low.json  project_case2_high.json  project_case3_special.json  test_case_1_low_thickness.json  test_case_2_high_measures.json  test_case_3_special_consideration.json
lr-hatch-coaming-measures/: .gitignore  pyproject.toml  requirements.txt  run_e2e.py  run_ndt.py  sample_input.json
lr-hatch-coaming-measures/lr_hatch_coaming/: __init__.py  decision_engine.py  evidence.py  learning_generator.py  measure_applicator.py  models.py  ndt_extractor.py  ocr_extractor.py  pipeline.py  rule_tables.py  viz_2d.py  viz_3d.py
lr-hatch-coaming-measures/tests/: test_decision_engine.py  test_e2e.py  test_learning_generator.py  test_ndt_extractor.py
power-automate/: vehicle-automail-flow.json
tests/: test_e2e.py  test_e2e_engine.py  test_engine_e2e.py
(+128 files in other folders)
